//  Copyright 2013 Walter Schulze
//
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.

syntax = "proto2";

package types;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

enum Type {
    option (gogoproto.goproto_enum_prefix) = false;
    UNKNOWN = 0;

    SINGLE_DOUBLE         = 101;
    SINGLE_INT            = 103;
    SINGLE_UINT           = 104;
    SINGLE_BOOL           = 108;
    SINGLE_STRING         = 109;
    SINGLE_BYTES          = 112;

    LIST_DOUBLE         = 201;
    LIST_INT            = 203;
    LIST_UINT           = 204;
    LIST_BOOL           = 208;
    LIST_STRING         = 209;
    LIST_BYTES          = 212;
};
